[workspace]
members = ["contracts/*"]

[workspace.dependencies]
getrandom = {version = "0.2.7", default-features = false, features = ["js"]}

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true